# ch7-proactive-event-driven-agents

./: .env.example  .gitignore  LICENSE  README.md  architecture.md  pyproject.toml
etl/: __init__.py  sync.py
src/: agent.py  app.py  logger.py
workflows/: agent_orchestration.md  etl_pipeline.md  privacy_mapping.md
