[project]
name = "geospatial-don-dashboard"
version = "0.1.0"
description = "Chapter 7 companion: Privacy-preserving agentic staffing dashboard"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faker>=37.12.0",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "google-adk>=1.18.0",
    "h3>=4.0.0",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "opik>=1.9.77",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "streamlit-folium>=0.25.3",
]
